--- a/backend/test/fixtures/options.yml
+++ b/backend/test/fixtures/options.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  option: one
-  customer: one
+  question: one
+  name: MyString
 
 two:
-  option: two
-  customer: two
+  question: two
+  name: MyString
