--- a/frontend_customer/package.json
+++ b/frontend_customer/package.json
@@ -2,7 +2,9 @@
   "name": "frontend_customer",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
