--- a/frontend_customer/package.json
+++ b/frontend_customer/package.json
@@ -5,8 +5,10 @@
   "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "google-maps-react": "^2.0.2",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
